# wayfire-scale-ipc

./: NEWS  README.md  meson.build  scale_ipc_filter.cpp  scale_ipc_filter.xml
debian/: README.Debian  changelog  control  copyright  files  rules  watch
debian/upstream/: metadata
